# game_of_life

./: Cargo.toml  README.md  index.html
doc/: crates.js
doc/game_of_life/: all.html  constant.ARENA_WIDTH.html  constant.SCREEN_WIDTH.html  enum.State.html  fn.get_index.html  fn.initialize_grid.html  fn.next_turn.html  fn.position_translation.html  fn.setup.html  index.html  struct.Indexes.html  struct.Materials.html  struct.Run.html
docs/: settings.html  source-files.js
docs/game_of_life/: constant.ARENA_HEIGHT.html  constant.SCREEN_HEIGHT.html  fn.change_state.html  fn.convert.html  fn.living_neighbours.html  fn.main.html  fn.read_coords.html  fn.respawn.html  fn.size_scaling.html  fn.space_hit.html  fn.spawn_grid.html  sidebar-items.js  struct.Grid.html  struct.Position.html  struct.SingleTile.html  struct.Size.html  struct.Tile.html
src/: main.rs
